--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MyWebsite</title>
+    <title>Yumi</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/user-attachments/assets/b5feabb7-3f20-4028-9436-e3f3307dd2ae">
     <!-- Tailwind + DaisyUI CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -64,17 +65,26 @@
     <!-- Footer -->
     <footer class="footer p-10 bg-base-300 text-base-content">
       <aside>
-        <p>MyWebsite © 2025 - All rights reserved</p>
+        <p>Yumi © 2025 - All rights reserved</p>
       </aside>
       <nav>
         <h6 class="footer-title">Social</h6>
         <div class="grid grid-flow-col gap-4">
-          <a href="#"
-            ><svg xmlns="http://www.w3.org/2000/svg" class="fill-current w-6 h-6" viewBox="0 0 24 24">
-              <path
-                d="M24 4.5a9.9 9.9 0 0 1-2.8.8 5 5 0 0 0 2.2-2.7 9.8 9.8 0 0 1-3.1 1.2 4.9 4.9 0 0 0-8.5 4.5A13.9 13.9 0 0 1 1.6 3.2a4.9 4.9 0 0 0 1.5 6.5A4.8 4.8 0 0 1 .9 9v.1a4.9 4.9 0 0 0 3.9 4.8 5 5 0 0 1-2.2.1 4.9 4.9 0 0 0 4.6 3.4 9.8 9.8 0 0 1-6.1 2.1A10 10 0 0 1 0 20a13.9 13.9 0 0 0 7.5 2.2c9 0 13.9-7.5 13.9-14v-.6A10 10 0 0 0 24 4.5z"
-              /></svg
-          ></a>
+          <a href="https://github.com/mayumiwandi" target="_blank" class="text-gray-800 hover:text-gray-600">
+  <svg xmlns="http://www.w3.org/2000/svg" class="fill-current w-6 h-6" viewBox="0 0 24 24">
+    <path d="M12 2C6.48 2 2 6.58 2 12.26c0 4.5 2.87 8.32 6.84 9.67.5.1.66-.22.66-.48v-1.7c-2.78.61-3.37-1.37-3.37-1.37-.45-1.18-1.1-1.5-1.1-1.5-.9-.63.07-.62.07-.62 1 .07 1.53 1.06 1.53 1.06.89 1.55 2.33 1.1 2.9.84.09-.66.35-1.1.63-1.36-2.22-.26-4.56-1.14-4.56-5.06 0-1.12.39-2.04 1.03-2.75-.1-.26-.45-1.3.1-2.7 0 0 .84-.27 2.75 1.03a9.35 9.35 0 0 1 5 0c1.9-1.3 2.74-1.03 2.74-1.03.56 1.4.21 2.44.1 2.7.64.7 1.03 1.63 1.03 2.75 0 3.93-2.34 4.8-4.57 5.06.36.32.68.95.68 1.91v2.82c0 .27.16.59.67.48A10.27 10.27 0 0 0 22 12.26C22 6.58 17.52 2 12 2Z"/>
+  </svg>
+</a>
+          <a href="https://tiktok.com/@python_yumi" target="_blank" class="text-black hover:text-gray-700">
+  <svg xmlns="http://www.w3.org/2000/svg" class="fill-current w-6 h-6" viewBox="0 0 24 24">
+    <path d="M12 2h3a5.94 5.94 0 0 0 5 5v3a8 8 0 0 1-5-1.75V17a5 5 0 1 1-5-5h1v3h-1a2 2 0 1 0 2 2V2Z" />
+  </svg>
+</a>
+          <a href="https://instagram.com/yumi_fantasy" target="_blank" class="text-pink-500 hover:text-pink-400">
+  <svg xmlns="http://www.w3.org/2000/svg" class="fill-current w-6 h-6" viewBox="0 0 24 24">
+    <path d="M7.75 2h8.5A5.76 5.76 0 0 1 22 7.75v8.5A5.76 5.76 0 0 1 16.25 22h-8.5A5.76 5.76 0 0 1 2 16.25v-8.5A5.76 5.76 0 0 1 7.75 2Zm0 1.5A4.26 4.26 0 0 0 3.5 7.75v8.5A4.26 4.26 0 0 0 7.75 20.5h8.5A4.26 4.26 0 0 0 20.5 16.25v-8.5A4.26 4.26 0 0 0 16.25 3.5Zm8.5 2.25a.75.75 0 1 1 0 1.5.75.75 0 0 1 0-1.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Z"/>
+  </svg>
+</a>
         </div>
       </nav>
     </footer>
